--- a/App/public/assets/css/style.css
+++ b/App/public/assets/css/style.css
@@ -1,68 +1,13 @@
 body {
-  width: 99%;
-  height: 900px;
-  background-color: #fc6;
+  background: linear-gradient(90deg, orange, #ec2f4b);
+}
+#burgerPic {
+  background: url("../img/burger.png");
+  height: 200px;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
-#top-bar {
-  margin-top: 28px;
-}
-
-.spacing-reset {
-  padding: 0;
-  margin: 0;
-  border: 0;
-}
-
-.list-reset {
-  padding: 0;
-  margin: 0;
+.burgers {
   list-style-type: none;
-  border: 0;
-}
-
-@media (min-width: 1200px) {
-  .container {
-    width: 990px;
-  }
-}
-
-@media (min-width: 992px) {
-  .container {
-    width: 990px;
-  }
-}
-
-.enter_section {
-  margin-top: 30px;
-  margin-bottom: 30px;
-  text-align: center;
-}
-
-#enter_text {
-  width: 400px;
-  height: 80px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  margin: auto;
-  font-size: 38px;
-}
-
-.task {
-  border-color: black;
-  border-style: solid;
-  border-width: 3px;
-}
-
-.button-size {
-  padding-bottom: 20px;
-}
-
-#text-enter-button {
-  margin-top: 10px;
-  margin-bottom: 18px;
-}
-
-h1 {
-  color: #f30;
 }
